--- a/src/component/Header/style.scss
+++ b/src/component/Header/style.scss
@@ -357,6 +357,7 @@
             }
             &-before{
                 height: 100vh;
+                justify-content: flex-start;
             }
             &-title{
                 font-size: 1.3rem;
